Eliminate horizontal overflow & button spacing issues

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,5 +1,4 @@
 /*Choropleth Vis 1*/
-
 .background {
     fill: none;
     pointer-events: all;
@@ -83,7 +82,7 @@ table{
     width:100%;
 }
 th, td {
-    padding: 10px;
+    padding: 5px;
     text-align: left;
 }
 tr:nth-child(odd) {background-color: white}
@@ -97,7 +96,7 @@ tr:nth-child(even) {background-color: lightgrey}
 .image_button
 {
     width: 100px;
-    margin: 0 0 0 30px;
+    margin: 0 0 5px 15px;
     left: 50%;
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
@@ -186,15 +185,15 @@ a.events
 {
     font-size: 13px;
     text-align: justify;
-    padding: 15px;
+    padding: 5%;
 }
 
 .explanation_heading
 {
     font-size: 18px;
     text-align: center;
-    padding-right:50px;
-    padding-left:50px;
+    padding-right:5%;
+    padding-left:5%;
 }
 
 .eventButtons
@@ -231,7 +230,10 @@ a.events
 
 html, body
 {
-    height: 100%;
+    /*height: 100%;*/
+    max-width: 100%;
+    overflow-x: hidden;
+}
 }
 
 body
